<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".ui.SplashScreenActivity">

    <ImageView
        android:id="@+id/background_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:background="@drawable/login_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ImageView>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/ic_round_arrow_back_ios_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ImageView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/btn_signupScreen_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="32sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_signupScreen_url">

            <ImageView
                android:id="@+id/ic_email"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:background="@drawable/email"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/txf_email"
                app:layout_constraintVertical_bias="0.6">

            </ImageView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txf_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:endIconDrawable="@drawable/customeye_selector"
                app:hintEnabled="false"
                app:boxBackgroundMode="filled"
                app:boxBackgroundColor="@android:color/transparent"
                android:background="@android:color/transparent"
                android:layout_marginStart="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ic_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                app:boxStrokeColor="@color/white"
                app:hintTextColor="@color/white"
                app:layout_constraintTop_toTopOf="parent" >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="0dp"
                android:background="@android:color/transparent"
                android:hint="@string/email"
                android:text="achala"
                android:fontFamily="@font/poppins_medium"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cl_email">

            <ImageView
                android:id="@+id/ic_password"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:background="@drawable/lock"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/txf_password"
                app:layout_constraintVertical_bias="0.6">

            </ImageView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txf_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:endIconDrawable="@drawable/customeye_selector"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/white"
                app:hintEnabled="false"
                app:boxBackgroundMode="filled"
                app:boxStrokeColor="@color/white"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                app:hintTextColor="@color/white"
                app:boxBackgroundColor="@android:color/transparent"
                android:background="@android:color/transparent"
                android:layout_marginStart="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ic_password"
                app:layout_constraintTop_toTopOf="parent"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:text="Test@1234"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/poppins_medium"
                    android:paddingStart="0dp"
                    android:hint="@string/password"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:clickable="false"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/forgot_password"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/btn_cardView_next"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:elevation="8dp"
            android:visibility="visible"
            app:cardCornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <TextView
                android:id="@+id/btn_splashScreen_next"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/btn_disable_login_color"
                android:clickable="false"
                android:gravity="center"
                android:enabled="false"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/background_image"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="20dp"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:clickable="false"
            android:gravity="center"
            android:text="@string/new_to_us"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_medium"
            android:textSize="13sp"
            android:layout_marginEnd="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_sign_up"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/btn_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_medium"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>





</androidx.constraintlayout.widget.ConstraintLayout>