<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/full_backgroud_color"
    android:paddingTop="50dp"
    android:paddingHorizontal="30dp"
    android:paddingBottom="20dp"
    tools:context=".ui.home.Fragments.Setting.SettingFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_large_settings"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:clickable="false"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/settings"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView2" />



    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/userImage"
                android:layout_width="114dp"
                android:layout_height="114dp"
                android:layout_marginTop="50dp"
                android:src="@drawable/default_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />



            <com.google.android.material.card.MaterialCardView
                android:id="@+id/enterView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="8dp"
                android:orientation="vertical"
                app:cardCornerRadius="9dp"
                android:layout_marginTop="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userImage"
                >

                <EditText
                    android:id="@+id/enter_otp"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/white"
                    android:fontFamily="@font/poppins_medium"
                    android:drawableStart="@drawable/email"
                    android:drawableTint="@color/light_grey"
                    android:drawablePadding="10dp"
                    android:hint="jainhood123@gmail.com"
                    android:inputType="text|phone"
                    android:padding="13dp"
                    android:textColor="@color/light_grey"
                    android:textColorHint="@color/light_grey"
                    android:textSize="16sp" />
            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/materialCardView"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="20dp"
                android:elevation="8dp"
                android:orientation="vertical"
                app:cardCornerRadius="9dp"
                app:layout_constraintTop_toBottomOf="@+id/enterView"
                tools:layout_editor_absoluteX="30dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="5dp">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/map_pin"
                        android:backgroundTint="@color/app_pink"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                    </ImageView>


                    <TextView
                        android:id="@+id/txt_location"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginBottom="10dp"
                        android:background="@color/white"
                        android:drawablePadding="10dp"
                        android:drawableTint="@color/app_pink"
                        android:fontFamily="@font/poppins_medium"
                        android:gravity="top|start"
                        android:hint="Update Your Location"
                        android:inputType="textMultiLine"
                        android:lines="2"
                        android:maxLines="4"
                        android:padding="13dp"
                        android:scrollbars="vertical"
                        android:textColor="@color/grey"
                        android:textColorHint="@color/grey"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toTopOf="@+id/btn_cardView_next"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toEndOf="@+id/imageView3"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="1.0" />

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/btn_cardView_next"
                        android:layout_width="92dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="10dp"
                        android:elevation="8dp"
                        android:visibility="visible"
                        app:cardCornerRadius="20dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent">

                        <TextView
                            android:id="@+id/btn_location_update"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/logout_pink"
                            android:fontFamily="@font/poppins_bold"
                            android:gravity="center"
                            android:text="@string/update"
                            android:textColor="@color/white"
                            android:textSize="14sp" />
                    </com.google.android.material.card.MaterialCardView>

                </androidx.constraintlayout.widget.ConstraintLayout>


            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:elevation="8dp"
                android:visibility="visible"
                app:cardCornerRadius="20dp"
                android:layout_marginTop="80dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialCardView">

                <TextView
                    android:id="@+id/btn_logout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/logout_pink"
                    android:fontFamily="@font/poppins_bold"
                    android:gravity="center"
                    android:text="@string/logout"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </com.google.android.material.card.MaterialCardView>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>